# JerryCode

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  install.sh
include/cortex/: api.hpp
include/cortex/agents/: agent_registry.hpp  bash_agent.hpp  file_read_agent.hpp  file_write_agent.hpp  glob_agent.hpp  grep_agent.hpp  search_agent.hpp  tool_agent.hpp
include/cortex/core/: context_compiler.hpp  context_expander.hpp  context_index.hpp  notebook.hpp  orchestrator.hpp  prompt_engine.hpp  session.hpp  task_manager.hpp  template_store.hpp  timeline.hpp  token_budget.hpp  types.hpp
include/cortex/providers/: anthropic.hpp  openai.hpp  provider.hpp  sse_parser.hpp
include/cortex/storage/: metadata_store.hpp  project_state.hpp  sqlite_wrapper.hpp
include/cortex/tools/: bash.hpp  file_read.hpp  file_write.hpp  glob.hpp  grep.hpp  tool.hpp
include/cortex/tui/: app.hpp  chat_panel.hpp  input_area.hpp  status_bar.hpp  theme.hpp  timeline_panel.hpp
include/cortex/util/: config.hpp  json_util.hpp  log.hpp  message_queue.hpp  string_util.hpp  uuid.hpp
prompts/: phase1_plan.txt  phase2_execute.txt  templates.json  timeline_review.txt
prompts/agents/: bash.txt  file_read.txt  file_write.txt  search.txt
schemas/: action_plan.schema.json
src/: main.cpp  test_harness.cpp
src/agents/: agent_registry.cpp  bash_agent.cpp  file_read_agent.cpp  file_write_agent.cpp  glob_agent.cpp  grep_agent.cpp  search_agent.cpp
src/core/: context_compiler.cpp  context_expander.cpp  context_index.cpp  notebook.cpp  orchestrator.cpp  prompt_engine.cpp  session.cpp  task_manager.cpp  template_store.cpp  timeline.cpp  token_budget.cpp  types.cpp
src/providers/: anthropic.cpp  openai.cpp  sse_parser.cpp
src/storage/: metadata_store.cpp  project_state.cpp  sqlite_wrapper.cpp
src/tools/: bash.cpp  file_read.cpp  file_write.cpp  glob.cpp  grep.cpp
src/tui/: app.cpp  chat_panel.cpp  input_area.cpp  status_bar.cpp  theme.cpp  timeline_panel.cpp
src/util/: config.cpp  log.cpp  string_util.cpp  uuid.cpp
tests/: CMakeLists.txt  create_large_project.sh  data_stress_test.sh  run_integration.sh  stress_test.sh  test_api.cpp  test_types.cpp
